--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "aos": "^2.3.4",
+    "framer-motion": "^12.23.12",
     "graphql-request": "^7.2.0",
     "lucide-react": "^0.525.0",
     "react": "^18.2.0",
