--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@calcom/embed-react": "^1.5.3",
     "@tailwindcss/typography": "^0.5.10",
     "aos": "^2.3.4",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "graphql-request": "^7.2.0",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
