--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-error-boundary": "^4.0.12",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.21.1",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
