--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@calcom/embed-react": "^1.5.3",
+    "@giscus/react": "^3.1.0",
     "@supabase/supabase-js": "^2.89.0",
     "@tailwindcss/typography": "^0.5.10",
     "aos": "^2.3.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
+    "giscus": "^1.6.0",
     "graphql-request": "^7.2.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.25",
