--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@giscus/react": "^3.1.0",
     "@supabase/supabase-js": "^2.89.0",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/prismjs": "^1.26.5",
     "aos": "^2.3.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
@@ -20,6 +21,7 @@
     "graphql-request": "^7.2.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.25",
+    "prismjs": "^1.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
