feat: update .env.example with new environment variables, add Dhrubaraj's resume PDF and blog image, and update Resume component with new URLs and last updated date

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@
 # Get your form ID from Formspree: https://formspree.io/
 
 VITE_FORMSPREE_FORM_ID=your_formspree_form_id_here
+VITE_GITHUB_TOKEN=your_github_personal_access_token_here
+VITE_SUPABASE_URL=https://your-project-id.supabase.co
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
