--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@calcom/embed-react": "^1.5.3",
     "@giscus/react": "^3.1.0",
+    "@studio-freight/react-lenis": "^0.0.47",
     "@supabase/supabase-js": "^2.89.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/prismjs": "^1.26.5",
@@ -19,6 +20,7 @@
     "framer-motion": "^12.23.25",
     "giscus": "^1.6.0",
     "graphql-request": "^7.2.0",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.25",
     "pdfjs-dist": "^5.4.530",
